# shadow-net

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  railway.toml  render.yaml  vercel.json
api/: index.py  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  cluster.py  config.py  dashboard.py  health.py  incidents.py  settings.py  sync.py  triage.py  ws.py
backend/app/api/admin/: __init__.py  admin_routes.py
backend/app/api/auth/: __init__.py  auth_routes.py  dependencies.py  profile_routes.py
backend/app/auth/: security.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  ai_triage.py  audit_log.py  incident.py  sync_queue.py  system_setting.py
backend/app/models/auth/: __init__.py  login_log.py  refresh_token.py  role.py  session.py  user.py  user_activity.py
backend/app/repositories/: __init__.py  audit_repository.py  base.py  incident_repository.py  settings_repository.py  sync_repository.py  triage_repository.py
backend/app/repositories/auth/: __init__.py  login_log_repository.py  refresh_token_repository.py  session_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  cluster.py  dashboard.py  health.py  incident.py  sync.py  triage.py
backend/app/services/: __init__.py  auth_service.py  base.py  cluster_service.py  incident_service.py  ollama_service.py  settings_service.py  sync_service.py  triage_service.py
backend/tests/: test_health.py
docs/: API.md  ARCHITECTURE.md  README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  (+3 more)
(+49 files in other folders)
